--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,1 +1,7 @@
-body { margin: 0; padding: 0; font-family: sans-serif; }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  @apply bg-[#fefdfb] text-gray-800;
+}
