--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,8 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  @apply bg-[#fefdfb] text-gray-800;
+  font-family: 'Inter', sans-serif;
 }
